Code review changes.
Style, readability, winston logging instead of console.log

--- a/config.ini.example
+++ b/config.ini.example
@@ -1,9 +1,12 @@
-[jumpup]
+[jumpups]
 api_key = qwertyuiopasdfghjklzxcvbnm1234567890
 host = example.com
 port = 8080
 
 [irc]
-host: irc.freenode.net
-channels: #example,#example-dev
-nick: jumpups
+host = irc.freenode.net
+channels = #example,#example-dev
+nick = jumpups
+
+[log]
+console = no
