--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "irc": ">=0.3.4",
         "daemon": ">=0.5.1",
         "inireader": ">=0.3.0",
-        "underscore": ">=1.3.3"
+        "underscore": ">=1.3.3",
+        "winston": ">=0.6.2"
     },
     "bin": {
         "jumpups-irc": "./jumpups-irc.js"
