--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "jumpups-irc",
+    "name": "standup-irc",
     "description": "IRC bot for recording status.",
     "version": "0.0.1",
     "author": {
@@ -8,7 +8,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/mythmon/jumpups-irc.git"
+        "url": "https://github.com/mythmon/standup-irc.git"
     },
     "dependencies": {
         "nomnom": ">=1.5.2",
@@ -19,6 +19,6 @@
         "winston": ">=0.6.2"
     },
     "bin": {
-        "jumpups-irc": "./jumpups-irc.js"
+        "standup-irc": "./standup-irc.js"
     }
 }
