--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
         "url": "https://github.com/mythmon/standup-irc.git"
     },
     "dependencies": {
-        "nomnom": ">=1.5.2",
         "irc": ">=0.3.4",
-        "daemon": ">=0.5.1",
-        "inireader": ">=0.3.0",
         "underscore": ">=1.3.3",
         "winston": ">=0.6.2"
+    },
+    "engines": {
+        "node": "0.6.18",
+        "npm": "1.1.32"
     },
     "bin": {
         "standup-irc": "./standup-irc.js"
