Add migrations and remember joined channels

--- a/config-sample.json
+++ b/config-sample.json
@@ -12,5 +12,9 @@
     "log": {
         "console": true,
         "file": null
+    },
+    "pg": {
+        "enabled": true,
+        "connstring": "tcp://user:pass@host/dbname"
     }
 }
