Added options and code to enable ssl and use a specific port. If the 'password' key exists in the irc settings section, the bot will attempt to use that password to register it's nick with nickserv.

--- a/config-sample.json
+++ b/config-sample.json
@@ -8,6 +8,9 @@
         "host": "irc.server.com",
         "channels": ["#channel1", "#channel2"],
         "nick": "standup"
+        "password": "password_for_nick", // If this key exists, the bot will try to identify with nickserv
+        "ssl": false,
+        "port": 6667 // 6697 for ssl
     },
     "log": {
         "console": true,
