--- a/config-sample.json
+++ b/config-sample.json
@@ -7,7 +7,7 @@
     "irc": {
         "host": "irc.server.com",
         "channels": ["#channel1", "#channel2"],
-        "nick": "standup"
+        "nick": "standup",
         "password": "password_for_nick", // If this key exists, the bot will try to identify with nickserv
         "ssl": false,
         "port": 6667 // 6697 for ssl
