Add jshint, and fix all its issues. This fixes a couple bugs.

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     },
     "bin": {
         "standup-irc": "node standup-irc.js"
+    },
+    "devDependencies": {
+        "jshint": "^2.5.0"
     }
 }
