--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,24 @@
-language: node_js
-node_js:
-- '6.5.0'
+services: docker
+env:
+  global:
+    - DOCKER_REGISTRY=registry.heroku.com
+    - HEROKU_PROD_APP=standups-irc
+    - HEROKU_STAGE_APP=standupstage-irc
+    - HEROKU_PROC_TYPE=worker
+    - DOCKER_CACHE_FILE=/home/travis/docker/cache.tar.gz
+cache:
+  directories:
+    - /home/travis/docker/
+before_install:
+  - docker -v
+  - docker-compose -v
+  - echo "ENV GIT_SHA ${TRAVIS_COMMIT}" >> Dockerfile
+  - bin/travis-docker-cache.sh load
+install: make build
 script:
-  - jshint *.js
-  - npm test
+  - make lint-image
+  - make test-image
+  - bin/travis-docker-cache.sh save
 notifications:
   email: false
   irc:
