--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dependencies": {
         "irc": ">=0.3.4",
         "pg": ">=0.7.2",
-        "winston": ">=0.6.2",
+        "winston": "^0.6.2",
         "lodash": "^2.4.1"
     },
     "engines": {
